base/thule/thule-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thule
  labels:
    io.kompose.service: thule-service
spec:
  selector:
    io.kompose.service: thule
  ports:
    - name: http
      port: 3000
      targetPort: 3000
