base/thule/thule-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-http-in
spec:
  podSelector:
    matchLabels:
      io.kompose.service: thule
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: projectcontour
      ports:
        - port: 3000
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-thule-mongo-out
spec:
  podSelector:
    matchLabels:
      io.kompose.service: thule
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dg-lite-protected
      ports:
        - port: 27017
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-thule-internet
spec:
  podSelector:
    matchLabels:
      io.kompose.service: thule
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 172.31.0.0/16
      ports:
        - port: 443
